# e-commerce-python-training

./: .env.example  .gitignore  Dockerfile  PROJECT_CONTEXT.md  README.md  clear_cache.py  docker-compose.yml  pyproject.toml  test_cors.py
app/: main.py
app/api/: deps.py  middleware.py  rate_limit.py  service_deps.py
app/api/routers/: admin_router.py  auth_router.py  cart_router.py  checkout_router.py  order_router.py  payment_router.py  product_router.py
app/core/: cache.py  cache_decorator.py  config.py  jwt.py  security.py  service_decorator.py
app/db/: init.py  seed.py
app/db/models/: cart.py  order.py  product.py  user.py
app/repositories/: base_repository.py  cart_repository.py  order_repository.py  product_repository.py  user_repository.py
app/schemas/: auth.py  cart.py  order.py  payment.py  product.py
app/scripts/: __init__.py  create_admin.py
app/services/: auth_service.py  cart_service.py  checkout_service.py  order_service.py  payment_service.py  product_service.py
tests/: __init__.py  conftest.py  test_auth.py  test_auth_service.py  test_cart.py  test_cart_service.py  test_checkout_orders.py  test_checkout_service.py  test_order_service.py  test_orders.py  test_payment_service.py  test_payments.py  test_product_service.py  test_products.py
