[project]
name = "ecommerce-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "beanie>=1.26.0",
  "pydantic[email]>=2.5.0",   # â† change this line
  "python-dotenv>=1.0.1",
  "motor>=3.5.0",
  "bcrypt>=4.1.2",
  "pyjwt>=2.9.0",
  "httpx>=0.27.0",
  "slowapi>=0.1.9",
  "redis>=5.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
